custom-resource-consumers/corpus/apps/crypto/btc-rpc-explorer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btc-rpc-explorer
  namespace: crypto
spec:
  type: ClusterIP
  selector:
    app: btc-rpc-explorer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: btc-rpc-explorer-cache
  namespace: crypto
spec:
  type: ClusterIP
  selector:
    app: btc-rpc-explorer-cache
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
