custom-resource-consumers/corpus/apps/crypto/btc-rpc-explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-rpc-explorer
  namespace: crypto
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
spec:
  tls:
    - hosts:
        - &host "btc.${blog_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: btc-rpc-explorer
                port:
                  number: 80
